--- a/index.html
+++ b/index.html
@@ -191,56 +191,56 @@
     </div>
 
     <div class="i-fi an-i">
-        <div class="toentit"><img src="static/web/img/home_09_E7A774CF.png" alt="Warm    love notes" width="650" height="46"></div>
-        <div class="tocntit">冬日暖阳发热地板</div>
-        <div class="tosentit"><img src="static/web/img/home_16_E7A774CF.png" alt="SCIENCE WARM GREEN HEALTH" width="194" height="18"></div>
+        <div class="toentit"><img src="image/main_block02_title.jpg" alt=""></div>
+        <!--<div class="tocntit">冬日暖阳发热地板</div>-->
+        <!--<div class="tosentit"><img src="static/web/img/home_16_E7A774CF.png" alt="SCIENCE WARM GREEN HEALTH" width="194" height="18"></div>-->
         <div class="i-fib w1000">
 
             <div class="ri">
                 <dl>
-                    <dd  style="background:url(http://lvwarm.com/static/web/img/home_21-02.jpg?v=v2) no-repeat">
+                    <dd  style="background:url(image/main_block02_pic1.jpg) no-repeat">
                         <a href="index.php/product/advantage_ACFBB307">
                             <div class="tit"><span>安全</span></div>
                             <div class="stit">24伏低电压，安全放心</div>
                         </a>
                     </dd>
-                    <dd  style="background:url(http://lvwarm.com/static/web/img/home_21-02.jpg?v=v2) no-repeat">
+                    <dd  style="background:url(image/main_block02_pic2.jpg) no-repeat">
                         <a href="index.php/product/advantage_ACFBB307">
                             <div class="tit"><span>节能</span></div>
                             <div class="stit">高达50%以上的节能</div>
                         </a>
                     </dd>
-                    <dd  style="background:url(http://lvwarm.com/static/web/img/home_21-02.jpg?v=v2) no-repeat">
+                    <dd  style="background:url(image/main_block02_pic3.jpg) no-repeat">
                         <a href="index.php/product/advantage_ACFBB307">
                             <div class="tit"><span>超薄</span></div>
                             <div class="stit">0.5毫米厚度，空间不浪费</div>
                         </a>
                     </dd>
-                    <dd style="background:url(http://lvwarm.com/static/web/img/home_21.jpg?v=v2) no-repeat center">
+                    <dd style="background:url(image/main_block02_pic4.jpg) no-repeat center">
                         <a href="index.php/product/advantage_ACFBB307">
                             <div class="tit"><span>高效</span></div>
                             <div class="stit">99%转化率，见效快</div>
                         </a>
                     </dd>
-                    <dd style="background:url(http://lvwarm.com/static/web/img/home_21-03.jpg?v=v2) no-repeat center">
+                    <dd style="background:url(image/main_block02_pic5.jpg) no-repeat center">
                         <a href="index.php/product/advantage_ACFBB307">
                             <div class="tit"><span>品牌</span></div>
                             <div class="stit">德国制造，安全放心</div>
                         </a>
                     </dd>
-                    <dd style="background:url(http://lvwarm.com/static/web/img/home_21-05.jpg?v=v2) no-repeat center">
+                    <dd style="background:url(image/main_block02_pic6.jpg) no-repeat center">
                         <a href="index.php/product/advantage_ACFBB307">
                             <div class="tit"><span>简易</span></div>
                             <div class="stit">安装便捷，智能温控</div>
                         </a>
                     </dd>
-                    <dd style="background:url(http://lvwarm.com/static/web/img/home_21-06.jpg?v=v2) no-repeat center">
+                    <dd style="background:url(image/main_block02_pic7.jpg) no-repeat center">
                         <a href="index.php/product/advantage_ACFBB307">
                             <div class="tit"><span>健康</span></div>
                             <div class="stit">生命之光，辐射无扬尘</div>
                         </a>
                     </dd>
-                    <dd style="background:url(http://lvwarm.com/static/web/img/home_21-04.jpg?v=v2) no-repeat center">
+                    <dd style="background:url(image/main_block02_pic8.jpg) no-repeat center">
                         <a href="index.php/product/advantage_ACFBB307">
                             <div class="tit"><span>品质</span></div>
                             <div class="stit">寿命长，无需维护</div>
