--- a/index/about/index.html
+++ b/index/about/index.html
@@ -105,7 +105,7 @@
             <li><a href="http://wpa.qq.com/msgrd?v=3&uin=871586801&site=qq&menu=yes" target="_black"><div class="leftlx"><i></i><p>QQ咨询</p></div></a></li>
             <li><a href="javascript:void(0)"><div class="leftlx"><i class="icon-tel"></i><p>咨询电话</p></div><span>0512-67722480</span></a></li>
             <li style="overflow: visible"><a href="javascript:void(0)"><div class="leftlx"><i class="icon-wx"></i><p>微信公众号</p></div></a>
-                <div class="ewm"><img src="../../image/drny.jpg" width="120" height="120"></div>
+                <div class="ewm"><img src="../../image/wx.jpg" width="120" height="120"></div>
             </li>
             <li><a href="http://weibo.com" target="_black"><div class="leftlx"><i class="icon-wb"></i><p>关注微博</p></div></a></li>
         </ul>
@@ -143,8 +143,8 @@
     </script>
 
     <div class="in-banner" style="background:url(../../image/banner_about.jpg) no-repeat center">
-        <!--<div class="bannertxt w1000">-->
-            <!--<img src="../../image/banner_about.jpg" width="852" height="88" class="txt1">-->
+        <div class="bannertxt w1000">
+            <img src="../../image/banner_descript.png" class="txt1">
             <!--<div class="txt5">-->
                 <!--<img src="../../../static/web/img/company_04_E7A774CF.png" width="176" height="18"  class="txt51">-->
                 <!--<span class="hr"></span>-->
@@ -152,7 +152,7 @@
                 <!--<span class="txt53"><a href="index.htm">关于我们</a></span>-->
                 <!--<a class="btn"></a>-->
             <!--</div>-->
-        <!--</div>-->
+        </div>
     </div>
    
     <div class="pro-se w1000">
@@ -202,7 +202,7 @@
         <div class="f-se w1000">
             <div class="le">
                 <a href="" class="lea">隐私声明</a><a href="" class="lea">友情链接</a><a href="" class="lea">法律声明</a>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CopyRight 2016&nbsp;&nbsp;&nbsp;&nbsp;苏州派涅尔工程设备有限公司&nbsp;&nbsp;&nbsp;&nbsp;All Right Reserved&nbsp;&nbsp;&nbsp;&nbsp;苏ICP备xxxxxxx号
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CopyRight 2016&nbsp;&nbsp;&nbsp;&nbsp;苏州派涅尔工程设备有限公司&nbsp;&nbsp;&nbsp;&nbsp;All Right Reserved&nbsp;&nbsp;&nbsp;&nbsp;苏ICP备16053707号
             </div>
         </div>
     </div>
@@ -214,7 +214,7 @@
 
         window.onload=function(){
             prozc();
-            dd(0)
+          //  dd(0)
         }
         profilescroll();
 
