--- a/index/product/index.html
+++ b/index/product/index.html
@@ -32,9 +32,9 @@
 		    <div class="logo"><a href="../../index.html"><img src="../../image/logo.png" height="60" alt="首页"></a></div>
 		
             <div class="menub">
-                <b></b>
+                <b style="left:116px"></b>
                 <ul>
-                    <li class="ho on">
+                    <li class="ho">
                         <a href="../../index/about/" class="btit">关于我们</a>
                         <!--<div class="subnav" style="width:500px;">-->
                             <!--<a href="index.htm">品牌简介</a><span>·</span>-->
@@ -44,7 +44,7 @@
                             <!--<a href="../honor#1/index.htm">人才策略</a>-->
                         <!--</div>-->
                     </li>
-                    <li class="ho">
+                    <li class="ho on">
                         <a href="../../index/product/" class="btit">产品中心</a>
                         <!--<div class="subnav" style="width:500px;">-->
 
@@ -105,7 +105,7 @@
             <li><a href="http://wpa.qq.com/msgrd?v=3&uin=871586801&site=qq&menu=yes" target="_black"><div class="leftlx"><i></i><p>QQ咨询</p></div></a></li>
             <li><a href="javascript:void(0)"><div class="leftlx"><i class="icon-tel"></i><p>咨询电话</p></div><span>0512-67722480</span></a></li>
             <li style="overflow: visible"><a href="javascript:void(0)"><div class="leftlx"><i class="icon-wx"></i><p>微信公众号</p></div></a>
-                <div class="ewm"><img src="../../image/drny.jpg" width="120" height="120"></div>
+                <div class="ewm"><img src="../../image/wx.jpg" width="120" height="120"></div>
             </li>
             <li><a href="http://weibo.com" target="_black"><div class="leftlx"><i class="icon-wb"></i><p>关注微博</p></div></a></li>
         </ul>
@@ -142,9 +142,9 @@
         })
     </script>
 
-    <div class="in-banner" style="background:url(../../image/banner_about.jpg) no-repeat center">
-        <!--<div class="bannertxt w1000">-->
-            <!--<img src="../../image/banner_about.jpg" width="852" height="88" class="txt1">-->
+    <div class="in-banner" style="background:url(../../image/banner_product.jpg) no-repeat center">
+        <div class="bannertxt w1000">
+            <img src="../../image/banner_descript.png" class="txt1">
             <!--<div class="txt5">-->
                 <!--<img src="../../../static/web/img/company_04_E7A774CF.png" width="176" height="18"  class="txt51">-->
                 <!--<span class="hr"></span>-->
@@ -152,10 +152,11 @@
                 <!--<span class="txt53"><a href="index.htm">关于我们</a></span>-->
                 <!--<a class="btn"></a>-->
             <!--</div>-->
-        <!--</div>-->
+        </div>
     </div>
 
     <div class="sixebig">
+        <div style="background: rgba(0, 0, 0, 0) url('../../image/product_block01_pic2.jpg') no-repeat scroll center center; height: 900px; position: absolute;width: 100%;margin-top: 196px;"></div>
         <div class="content adven-list">
             <div class="tit-gy-one adven">
                 <img src="../../../static/web/img/public/fw_53_E7A774CF.png" alt="Brand Profile" width="460" height="28">
@@ -163,28 +164,30 @@
             </div>
             <ul class="bz-list">
                 <li class="bz-list-one">
-                    <div class="bz-bg once-one">值暖：只装地板，就有地暖</div>
-                    <p>只装地板就有地暖。一次消费可获得三种功能三种享受：地暖、地板、理疗。采用高档实木材质，商住两用。周到的售前、售中、售后服务，让客户满意，使用者安心。</p>            </li>
+                    <div class="bz-bg once-one">安全</div>
+                    <p>产品使用24V低压技术，通过了欧盟及国内所有相关认证，不会造成触电事故，不产生对人体有害的电磁波辐射。产品温度始终低于40度，不会引起火灾，不会对建筑造成任何损伤，保障了用户的安全。</p>            </li>
                 <li class="bz-list-two">
-                    <div class="bz-bg once-tw">质暖：安全可靠，稳定无忧</div>
-                    <p>独有的非金属发热体，具有不脱落、不断裂、耐腐、防水、阻燃等性能，绝缘达到3750V。获得欧盟CE认证。拥有高性能检测系统，智能化检测，确保安全，使用寿命长达20年以上。</p>            </li>
+                    <div class="bz-bg once-tw">超薄</div>
+                    <p>发热膜厚度仅有0.5毫米，能灵活铺设在墙面、天花板或地面下，安装方便的同时避免了空间的浪费，集实用性与美观性为一体。<br/>&nbsp;</p>            </li>
                 <li class="bz-list-one">
-                    <div class="bz-bg once-th">直暖：即开即热，节能高效</div>
-                    <p>成功运用多项节能技术，远红外发热，传热路径短，升温快，热效率和电热转化率高。即开即热，可实现15-30分钟达到预设温度的需求。智能温控系统，有效降低能耗。</p>            </li>
+                    <div class="bz-bg once-th">高效</div>
+                    <p>辐射热比例可达99%，电能直接转化为热能，没有能量损失。<br/>&nbsp;</p>            </li>
                 <li class="bz-list-two">
-                    <div class="bz-bg once-fo">智暖：安装便捷，智能温控</div>
-                    <p>集成一体，安装与普通地板一样简便，使用专用连接线一插即可，不伤地面墙面，一次性安装成型。智能化设计，可满足不同用户的个性化取暖需求。实现分时分区、随时开关、随心采暖的人性化需求，让您尊享健康智能化新生活。</p>            </li>
+                    <div class="bz-bg once-fo">节能</div>
+                    <p>红外辐射可以实现室内温度比体感温度低2-3度供暖,相比对流供暖节能最大可达50%。大面积供暖可以实现直接供热，不需要预热，节约能量费用。<br/>&nbsp;</p>            </li>
                 <li class="bz-list-one">
-                    <div class="bz-bg once-fi">只暖：科学采暖，舒适环保</div>
-                    <p>从古至今，木材都是最健康的地面材料，科学地避免了“地硬伤脑、地软伤身”的缺点。木
-                        材与地暖相结合是目前最为科学的采暖方式之一。远红外热辐射功能，有效促进人体血液循
-                        环，热量由下而上均匀恒流，“温足而凉顶”，完全符合人体生理需求。甲醛释放符合欧盟EO
-                        标准，为绿色、环保、节能、可持续发展产品。<br/></p>            </li>
+                    <div class="bz-bg once-fi">品质</div>
+                    <p>使用寿命与建筑物相同，不需要定期维护，品质值得信赖。<br/>&nbsp;<br/>&nbsp;</p>            </li>
                 <li class="bz-list-two">
-                    <div class="bz-bg once-si">稚暖：老房改造，轻松升级</div>
-                    <p>对于即便是已经装修入住的房屋，也能轻松实现地暖改造。避免传统地暖安装时的大兴土木
-                        和无谓浪费，安装便捷，即铺即用，不占空间，不占层高，是老房采暖，轻松升级的首选。
-                        让您安享温暖美好生活。</p>            </li>
+                    <div class="bz-bg once-si">品牌</div>
+                    <p>德国制造，采用先进的工艺技术将石墨烯完美应用到供暖领域，产品功效安全放心。<br/>&nbsp;<br/>&nbsp;</p>            </li>
+                <li class="bz-list-one">
+                    <div class="bz-bg once-sv">简易</div>
+                    <p>可利用现有的电气安装，避免了复杂的设计规划，专业人员1-2天即可完成，安装便捷。智能温控满足用户个性需求，可以精准和高效地控制温度，实现分时分户供暖。</p>            </li>
+                <li class="bz-list-two">
+                    <div class="bz-bg once-ni">健康</div>
+                    <p>辐射波为“生命之光”，可促进和改善人体的血液循环；有利于消除人体疲劳和肌体机能恢复，增强新陈代谢，提高人体免疫功能。供暖舒适度高，不会干燥空气，不会扬尘，特别适合过敏人群。</p>            </li>
+                    
             </ul>
             <div class="center-bold"></div>
         </div>
@@ -196,7 +199,7 @@
         <div class="f-se w1000">
             <div class="le">
                 <a href="" class="lea">隐私声明</a><a href="" class="lea">友情链接</a><a href="" class="lea">法律声明</a>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CopyRight 2016&nbsp;&nbsp;&nbsp;&nbsp;苏州派涅尔工程设备有限公司&nbsp;&nbsp;&nbsp;&nbsp;All Right Reserved&nbsp;&nbsp;&nbsp;&nbsp;苏ICP备xxxxxxx号
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CopyRight 2016&nbsp;&nbsp;&nbsp;&nbsp;苏州派涅尔工程设备有限公司&nbsp;&nbsp;&nbsp;&nbsp;All Right Reserved&nbsp;&nbsp;&nbsp;&nbsp;苏ICP备16053707号
             </div>
         </div>
     </div>
@@ -208,7 +211,7 @@
 
         window.onload=function(){
             prozc();
-            dd(0)
+           // dd(1)
         }
 
         $(function(){
