--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <li><a href="http://wpa.qq.com/msgrd?v=3&uin=871586801&site=qq&menu=yes" target="_black"><div class="leftlx"><i></i><p>QQ咨询</p></div></a></li>
             <li><a href="javascript:void(0)"><div class="leftlx"><i class="icon-tel"></i><p>咨询电话</p></div><span>0512-67722480</span></a></li>
             <li style="overflow: visible"><a href="javascript:void(0)"><div class="leftlx"><i class="icon-wx"></i><p>微信公众号</p></div></a>
-                <div class="ewm"><img src="./image/drny.jpg" width="120" height="120"></div>
+                <div class="ewm"><img src="./image/wx.jpg" width="120" height="120"></div>
             </li>
             <li><a href="http://weibo.com" target="_black"><div class="leftlx"><i class="icon-wb"></i><p>关注微博</p></div></a></li>
         </ul>
@@ -199,52 +199,68 @@
             <div class="ri">
                 <dl>
                     <dd  style="background:url(image/main_block02_pic1.jpg) no-repeat">
-                        <a href="index.php/product/advantage_ACFBB307">
-                            <div class="tit"><span>安全</span></div>
-                            <div class="stit">24伏低电压，安全放心</div>
-                        </a>
+                        <!--<div class="mask">-->
+                            <a href="index.php/product/advantage_ACFBB307">
+                                <div class="tit"><span>安全</span></div>
+                                <div class="stit">24伏低电压，安全放心</div>
+                            </a>
+                        <!--</div>-->
                     </dd>
                     <dd  style="background:url(image/main_block02_pic2.jpg) no-repeat">
-                        <a href="index.php/product/advantage_ACFBB307">
-                            <div class="tit"><span>节能</span></div>
-                            <div class="stit">高达50%以上的节能</div>
-                        </a>
+                        <!--<div class="mask">-->
+                            <a href="index.php/product/advantage_ACFBB307">
+                                <div class="tit"><span>节能</span></div>
+                                <div class="stit">高达50%以上的节能</div>
+                            </a>
+                        <!--</div>-->
                     </dd>
                     <dd  style="background:url(image/main_block02_pic3.jpg) no-repeat">
+                        <!--<div class="mask">-->
                         <a href="index.php/product/advantage_ACFBB307">
                             <div class="tit"><span>超薄</span></div>
                             <div class="stit">0.5毫米厚度，空间不浪费</div>
                         </a>
+                        <!--</div>-->
                     </dd>
                     <dd style="background:url(image/main_block02_pic4.jpg) no-repeat center">
+                        <!--<div class="mask">-->
                         <a href="index.php/product/advantage_ACFBB307">
                             <div class="tit"><span>高效</span></div>
                             <div class="stit">99%转化率，见效快</div>
                         </a>
+                        <!--</div>-->
                     </dd>
                     <dd style="background:url(image/main_block02_pic5.jpg) no-repeat center">
+                        <!--<div class="mask">-->
                         <a href="index.php/product/advantage_ACFBB307">
                             <div class="tit"><span>品牌</span></div>
                             <div class="stit">德国制造，安全放心</div>
                         </a>
+                        <!--</div>-->
                     </dd>
                     <dd style="background:url(image/main_block02_pic6.jpg) no-repeat center">
+                        <!--<div class="mask">-->
                         <a href="index.php/product/advantage_ACFBB307">
                             <div class="tit"><span>简易</span></div>
                             <div class="stit">安装便捷，智能温控</div>
                         </a>
+                        <!--</div>-->
                     </dd>
                     <dd style="background:url(image/main_block02_pic7.jpg) no-repeat center">
+                        <!--<div class="mask">-->
                         <a href="index.php/product/advantage_ACFBB307">
                             <div class="tit"><span>健康</span></div>
                             <div class="stit">生命之光，辐射无扬尘</div>
                         </a>
+                        <!--</div>-->
                     </dd>
                     <dd style="background:url(image/main_block02_pic8.jpg) no-repeat center">
+                        <!--<div class="mask">-->
                         <a href="index.php/product/advantage_ACFBB307">
                             <div class="tit"><span>品质</span></div>
                             <div class="stit">寿命长，无需维护</div>
                         </a>
+                        <!--</div>-->
                     </dd>
                 </dl>
             </div>
@@ -313,7 +329,7 @@
 		<div class="f-se w1000">
 			<div class="le">
 			 <a href="" class="lea">隐私声明</a><a href="" class="lea">友情链接</a><a href="" class="lea">法律声明</a>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CopyRight 2016&nbsp;&nbsp;&nbsp;&nbsp;苏州派涅尔工程设备有限公司&nbsp;&nbsp;&nbsp;&nbsp;All Right Reserved&nbsp;&nbsp;&nbsp;&nbsp;苏ICP备xxxxxxx号
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CopyRight 2016&nbsp;&nbsp;&nbsp;&nbsp;苏州派涅尔工程设备有限公司&nbsp;&nbsp;&nbsp;&nbsp;All Right Reserved&nbsp;&nbsp;&nbsp;&nbsp;苏ICP备16053707号
 			</div>
 		</div>
 	</div>
