--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <div class="pro-se w1000">
         <div class="pro-fi">
         <div class="intoentit"><img src="image/main_block01_title.jpg" alt=""></div>
-        <!--<div class="intocntit">品牌简介</div>-->
+        <div class="intocntit">石墨烯的应用</div>
     </div>
         <div class="le">
             <img src="image/main_block01_pic1.jpg" width="540" height="480" style="left: 0; top: 60px;" >
@@ -191,8 +191,8 @@
     </div>
 
     <div class="i-fi an-i">
-        <div class="toentit"><img src="image/main_block02_title.jpg" alt=""></div>
-        <!--<div class="tocntit">冬日暖阳发热地板</div>-->
+        <div class="intoentit"><img src="image/main_block02_title.jpg" alt=""></div>
+        <div class="intocntit">产品特点</div>
         <!--<div class="tosentit"><img src="static/web/img/home_16_E7A774CF.png" alt="SCIENCE WARM GREEN HEALTH" width="194" height="18"></div>-->
         <div class="i-fib w1000">
 
@@ -268,8 +268,8 @@
     </div>
 
     <div class="i-fo an-i">
-    	<div class="toentit"><img src="image/main_block03_title.jpg" alt=""></div>
-        <!--<div class="tocntit">招商加盟</div>-->
+    	<div class="intoentit"><img src="image/main_block03_title.jpg" alt=""></div>
+        <div class="intocntit">客户案例</div>
         <!--<div class="tosentit"><img src="static/web/img/home_16_E7A774CF.png" alt="SCIENCE WARM GREEN HEALTH" width="194" height="18"></div>-->
         <div class="i-fob w1000">
         	<ul>
