--- a/index/about/index.html
+++ b/index/about/index.html
@@ -160,7 +160,7 @@
             <div class="intoentit">
                 <img src="../../image/about_block01_title.jpg" alt="">
             </div>
-            <!--<div class="intocntit">品牌简介</div>-->
+            <div class="intocntit">品牌简介</div>
         </div>
         <div class="le">
             <img src="../../image/about_block01_pic1.jpg"  />
