--- a/index/product/index.html
+++ b/index/product/index.html
@@ -158,8 +158,8 @@
     <div class="sixebig">
         <div style="background: rgba(0, 0, 0, 0) url('../../image/product_block01_pic2.jpg') no-repeat scroll center center; height: 900px; position: absolute;width: 100%;margin-top: 196px;"></div>
         <div class="content adven-list">
-            <div class="tit-gy-one adven">
-                <img src="../../../static/web/img/public/fw_53_E7A774CF.png" alt="Brand Profile" width="460" height="28">
+            <div class="tit-gy-one adven" style="float:none; margin: 64px auto 52px;">
+                <img src="../../image/product_block01_title.jpg" alt="Brand Profile" />
                 <div class="company_detail"> <span class="two-sz">产品优势</span></div>
             </div>
             <ul class="bz-list">
@@ -168,7 +168,7 @@
                     <p>产品使用24V低压技术，通过了欧盟及国内所有相关认证，不会造成触电事故，不产生对人体有害的电磁波辐射。产品温度始终低于40度，不会引起火灾，不会对建筑造成任何损伤，保障了用户的安全。</p>            </li>
                 <li class="bz-list-two">
                     <div class="bz-bg once-tw">超薄</div>
-                    <p>发热膜厚度仅有0.5毫米，能灵活铺设在墙面、天花板或地面下，安装方便的同时避免了空间的浪费，集实用性与美观性为一体。<br/>&nbsp;</p>            </li>
+                    <p>发热膜厚度仅有0.5毫米，能灵活铺设在墙面、天花板或地面下，安装方便的同时避免了空间的浪费，集实用性与美观性为一体。</p>            </li>
                 <li class="bz-list-one">
                     <div class="bz-bg once-th">高效</div>
                     <p>辐射热比例可达99%，电能直接转化为热能，没有能量损失。<br/>&nbsp;</p>            </li>
