--- a/index/product/index.html
+++ b/index/product/index.html
@@ -35,6 +35,16 @@
                 <b style="left:116px"></b>
                 <ul>
                     <li class="ho">
+                        <a href="/" class="btit">首&nbsp;&nbsp;页</a>
+                        <!--<div class="subnav" style="width:500px;">-->
+                            <!--<a href="index.php/about/profile/index.htm">品牌简介</a><span>·</span>-->
+                            <!--<a href="index.php/about/culture/index.htm">品牌文化</a><span>·</span>-->
+                            <!--<a href="./about/course.htm">取暖历程</a><span>·</span>-->
+                            <!--<a href="index.php/about/honor/index.htm">荣誉资质</a><span>·</span>-->
+                            <!--<a href="index.php/about/honor#1/index.htm">人才策略</a>-->
+                        <!--</div>-->
+                    </li>
+                    <li class="ho">
                         <a href="../../index/about/" class="btit">关于我们</a>
                         <!--<div class="subnav" style="width:500px;">-->
                             <!--<a href="index.htm">品牌简介</a><span>·</span>-->
