--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
                 <b></b>
                 <ul>
                     <li class="ho on">
+                        <a href="/" class="btit">首&nbsp;&nbsp;页</a>
+                        <!--<div class="subnav" style="width:500px;">-->
+                            <!--<a href="index.php/about/profile/index.htm">品牌简介</a><span>·</span>-->
+                            <!--<a href="index.php/about/culture/index.htm">品牌文化</a><span>·</span>-->
+                            <!--<a href="./about/course.htm">取暖历程</a><span>·</span>-->
+                            <!--<a href="index.php/about/honor/index.htm">荣誉资质</a><span>·</span>-->
+                            <!--<a href="index.php/about/honor#1/index.htm">人才策略</a>-->
+                        <!--</div>-->
+                    </li>
+                    <li class="ho">
                         <a href="/index/about/" class="btit">关于我们</a>
                         <!--<div class="subnav" style="width:500px;">-->
                             <!--<a href="index.php/about/profile/index.htm">品牌简介</a><span>·</span>-->
@@ -347,11 +357,12 @@
     $(window).scroll(function(){
         scrollanimate()
     })
-	$(".menub b").hide();
+	// $(".menub b").hide();
 	$(".menub").hover(function(){
-		$(".menub b").show();
+		// $(".menub b").show();
 	},function(){
-		$(".menub b").hide();
+        $(".header-main .menub b").stop(true,true).css({"left":( 18 ) +"px"})
+		// $(".menub b").hide();
 	})
     var ri=$(".ri dl dd");
     ri.bind("mouseenter mouseleave",function(){
