--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
         <div class="intocntit">石墨烯的应用</div>
     </div>
         <div class="le">
-            <img src="image/main_block01_pic1.jpg" width="540" height="480" style="left: 0; top: 60px;" >
-            <img src="image/main_block01_pic2.jpg" width="275" height="275" style="right: -174px; top: 0;" >
+            <img src="image/main_block01_pic1.jpg" width="562" height="500" style="left: 0; top: 50px;" >
+            <img src="image/main_block01_pic2.jpg" width="235" height="235" style="right: -174px; top: 0;" >
 
         </div>
         <div class="ri">
@@ -267,8 +267,8 @@
                     <dd style="background:url(image/main_block02_pic8.jpg) no-repeat center">
                         <!--<div class="mask">-->
                         <a href="index.php/product/advantage_ACFBB307">
-                            <div class="tit"><span>品质</span></div>
-                            <div class="stit">寿命长，无需维护</div>
+                            <div class="tit"><span>环保</span></div>
+                            <div class="stit">无污染，零排放</div>
                         </a>
                         <!--</div>-->
                     </dd>
