--- a/index/about/index.html
+++ b/index/about/index.html
@@ -226,6 +226,14 @@
             prozc();
           //  dd(0)
         }
+
+        $(".menub").hover(function(){
+            // $(".menub b").show();
+        },function(){
+            $(".header-main .menub b").stop(true,true).css({"left":( (65+34) + 18 ) +"px"})
+            // $(".menub b").hide();
+        });
+   
         profilescroll();
 
         $(window).scroll(function(){
