--- a/index/product/index.html
+++ b/index/product/index.html
@@ -178,22 +178,22 @@
                     <p>产品使用24V低压技术，通过了欧盟及国内所有相关认证，不会造成触电事故，不产生对人体有害的电磁波辐射。产品温度始终低于40度，不会引起火灾，不会对建筑造成任何损伤，保障了用户的安全。</p>            </li>
                 <li class="bz-list-two">
                     <div class="bz-bg once-tw">超薄</div>
-                    <p>发热膜厚度仅有0.5毫米，能灵活铺设在墙面、天花板或地面下，安装方便的同时避免了空间的浪费，集实用性与美观性为一体。</p>            </li>
+                    <p>发热膜厚度仅有0.5毫米，能灵活铺设在墙面、天花板或地面下，安装方便的同时避免了空间的浪费，集实用性与美观性为一体。<br/>&nbsp;</p>            </li>
                 <li class="bz-list-one">
                     <div class="bz-bg once-th">高效</div>
-                    <p>辐射热比例可达99%，电能直接转化为热能，没有能量损失。<br/>&nbsp;</p>            </li>
+                    <p>辐射热比例可达99%，电能直接转化为热能，没有能量损失。<br/>&nbsp;<br/>&nbsp;</p>            </li>
                 <li class="bz-list-two">
                     <div class="bz-bg once-fo">节能</div>
-                    <p>红外辐射可以实现室内温度比体感温度低2-3度供暖,相比对流供暖节能最大可达50%。大面积供暖可以实现直接供热，不需要预热，节约能量费用。<br/>&nbsp;</p>            </li>
+                    <p>红外辐射可以实现室内温度比体感温度低2-3度供暖,相比对流供暖节能最大可达50%。大面积供暖可以实现直接供热，不需要预热，节约能量费用。<br/>&nbsp;<br/>&nbsp;</p>            </li>
                 <li class="bz-list-one">
-                    <div class="bz-bg once-fi">品质</div>
-                    <p>使用寿命与建筑物相同，不需要定期维护，品质值得信赖。<br/>&nbsp;<br/>&nbsp;</p>            </li>
+                    <div class="bz-bg once-fi">环保</div>
+                    <p>平面供暖系统不产生 CO2排放。M-Term 平面供暖系统非常适合使用生态电源（光电、风电等）。使用便捷的电子温度调节器可以使暖气系统更加高效。<br/>&nbsp;</p>            </li>
                 <li class="bz-list-two">
                     <div class="bz-bg once-si">品牌</div>
-                    <p>德国制造，采用先进的工艺技术将石墨烯完美应用到供暖领域，产品功效安全放心。<br/>&nbsp;<br/>&nbsp;</p>            </li>
+                    <p>采用先进的工艺技术将石墨烯完美应用到供暖领域，产品功效安全放心。使用寿命与建筑物相同，不需要定期维护，德国制造，品质值得信赖。<br/>&nbsp;</p>            </li>
                 <li class="bz-list-one">
                     <div class="bz-bg once-sv">简易</div>
-                    <p>可利用现有的电气安装，避免了复杂的设计规划，专业人员1-2天即可完成，安装便捷。智能温控满足用户个性需求，可以精准和高效地控制温度，实现分时分户供暖。</p>            </li>
+                    <p>可利用现有的电气安装，避免了复杂的设计规划，专业人员1-2天即可完成，安装便捷。智能温控满足用户个性需求，可以精准和高效地控制温度，实现分时分户供暖。<br/>&nbsp;</p>            </li>
                 <li class="bz-list-two">
                     <div class="bz-bg once-ni">健康</div>
                     <p>辐射波为“生命之光”，可促进和改善人体的血液循环；有利于消除人体疲劳和肌体机能恢复，增强新陈代谢，提高人体免疫功能。供暖舒适度高，不会干燥空气，不会扬尘，特别适合过敏人群。</p>            </li>
@@ -224,6 +224,12 @@
            // dd(1)
         }
 
+$(".menub").hover(function(){
+    // $(".menub b").show();
+},function(){
+    $(".header-main .menub b").stop(true,true).css({"left":( 2*(65+34) + 18 ) +"px"})
+    // $(".menub b").hide();
+});
         $(function(){
             culscroll()
             scls()
